Use QDirIterator for listing the maildir folders. This: - avoids some extra stats - avoids calling into Maildir::findRealKey that caches the keys and uses a lot of memory for no real reason (in this case)

REVIEW: 113918
BUG: 321944